config/kustomize/resources/ciliumnetworkpolicy_capvcd-controller-manager.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-vcd
    control-plane: controller-manager
  name: capvcd-controller-manager
spec:
  egress:
    - toEntities:
      - kube-apiserver
  endpointSelector:
    matchLabels:
      cluster.x-k8s.io/provider: infrastructure-vcd
      control-plane: controller-manager
  ingress:  # for webhooks
    - fromEntities:
      - cluster  # Even though it's a kube-apiserver pod running in host network it doesn't work without "cluster"
      - kube-apiserver
