config/kustomize/resources/networkpolicy_capvcd-controller-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-vcd
    control-plane: controller-manager
  name: capvcd-controller-manager
spec:
  egress:
    # coredns
    - ports:
        - port: 53
          protocol: UDP
        - port: 1053
          protocol: UDP
        - port: 53
          protocol: TCP
        - port: 1053
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  podSelector:
    matchLabels:
      cluster.x-k8s.io/provider: infrastructure-vcd
      control-plane: controller-manager
  policyTypes:
    - Egress
